--- a/styles.css
+++ b/styles.css
@@ -37,8 +37,8 @@ nav ul li a {
 
 main {
     padding-top: 60px;
-    padding-left: 40px; /* Increased padding for more space around content */
-    padding-right: 40px;
+    padding-left: 60px; /* Increased padding for more space around content */
+    padding-right: 60px;
 }
 
 footer {
@@ -143,14 +143,15 @@ footer {
 
 #project-title {
     text-align: center;
-    font-size: 42px; /* Increased font size for the project title */
+    font-size: 36px; /* Matching the home page title size */
+    color: #283618; /* Using the same color as the home page */
     margin-bottom: 40px;
 }
 
 .project-header {
     text-align: center;
     margin-bottom: 20px;
-    font-size: 28px; /* Match the heading style */
+    font-size: 32px; /* Match the heading style to the home page */
     color: #283618; /* Use the same color as the home page */
 }
 
@@ -165,7 +166,7 @@ footer {
     width: 400px !important;
     height: 400px !important;
     object-fit: cover;
-    margin-right: 20px; /* Added space between image and text */
+    margin: 20px; /* Added more space between image and page edge */
 }
 
 .text-box {
@@ -176,6 +177,11 @@ footer {
 
 .text-box p {
     margin: 0;
+}
+
+/* Alternating Section Layouts */
+.project-content:nth-child(even) {
+    flex-direction: row-reverse;
 }
 
 @media (max-width: 768px) {
@@ -197,4 +203,3 @@ footer {
         width: 100%; /* Ensures proper alignment on smaller screens */
     }
 }
-
