--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,6 @@ footer {
 
 .project-section {
     display: flex;
-    flex-wrap: nowrap;
     justify-content: space-between;
     align-items: center;
     margin: 40px 0;
@@ -81,21 +80,23 @@ footer {
     width: 100%;
 }
 
-.section-content .image-box {
+.text-box {
+    width: 40%;
+    text-align: center;
+    font-size: 18px;
+}
+
+.image-box {
     width: 25%;
     max-width: 400px;
 }
 
-.section-content .image-box img {
+.image-box img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-.section-content .text-box {
-    width: 50%;
-    text-align: center;
-    font-size: 18px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* Responsive Design */
@@ -110,12 +111,12 @@ footer {
         align-items: center;
     }
 
-    .section-content .image-box {
+    .image-box {
         width: 80%;
         margin-bottom: 20px;
     }
 
-    .section-content .text-box {
+    .text-box {
         width: 100%;
         text-align: center;
     }
