--- a/styles.css
+++ b/styles.css
@@ -56,14 +56,11 @@ footer {
     display: flex;
     justify-content: space-between;
     margin: 20px 0;
-    padding-left: 20px;
-    padding-right: 20px;
 }
 
 #about-me-pictures img {
     width: 23%;
     height: auto;
-    object-fit: cover;
 }
 
 /* About Me Header */
@@ -92,8 +89,6 @@ footer {
     display: flex;
     flex-direction: column;
     gap: 40px;
-    padding-left: 20px;
-    padding-right: 20px;
 }
 
 .project {
@@ -109,7 +104,6 @@ footer {
     justify-content: space-between;
     gap: 10px;
     flex-wrap: nowrap;
-    width: 25%;
 }
 
 .project-images img {
@@ -120,7 +114,7 @@ footer {
 
 .project-info {
     text-align: center;
-    width: 50%; /* Adjusted width to center text and keep alignment */
+    width: 30%;
 }
 
 .project-info h3 {
@@ -142,31 +136,74 @@ footer {
     border-radius: 5px;
 }
 
+/* Project Page Styles */
+#project-title {
+    text-align: center;
+    font-size: 48px;
+    margin-bottom: 20px;
+}
+
+.project-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin: 40px 0;
+    padding: 0 20px;
+}
+
+.section-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    width: 40%;
+}
+
+.section-header h2 {
+    font-size: 32px;
+    margin: 0;
+}
+
+.text-box p {
+    font-size: 18px;
+    margin-top: 5px;
+    margin-bottom: 0;
+}
+
+.image-box {
+    width: 25%;
+    max-width: 400px;
+    text-align: center;
+}
+
+.image-box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 /* Responsive Design */
 @media (max-width: 768px) {
-    .project {
+    .project-section {
         flex-direction: column;
         align-items: center;
     }
 
-    .project-images {
+    .section-content {
         flex-direction: column;
         align-items: center;
         width: 100%;
     }
 
-    .project-images img {
-        width: 100%;
-        height: auto;
-        margin-bottom: 10px;
+    .image-box {
+        width: 80%;
+        margin-bottom: 20px;
     }
 
-    #about-me-pictures img {
+    .text-box {
         width: 100%;
-        margin-bottom: 10px;
-    }
-
-    .project-info {
-        width: 100%;
+        text-align: center;
     }
 }
