--- a/styles.css
+++ b/styles.css
@@ -54,8 +54,10 @@ footer {
 /* Project Page Styles */
 #project-title {
     text-align: center;
-    font-size: 48px;
+    font-size: 48px; /* Change this value to adjust the font size */
     margin-bottom: 20px;
+    font-family: 'Baloo 2', sans-serif; /* This sets the font */
+    color: #283618; /* This sets the color */
 }
 
 .project-section {
@@ -69,9 +71,10 @@ footer {
 .section-header {
     width: 100%;
     text-align: center;
-    font-size: 32px;
+    font-size: 32px; /* Change this value to adjust the font size */
     margin-bottom: 10px;
-    color: #283618;
+    font-family: 'Baloo 2', sans-serif; /* This sets the font */
+    color: #283618; /* This sets the color */
 }
 
 .section-content {
@@ -84,10 +87,12 @@ footer {
 .text-box {
     width: 30%;
     text-align: center;
-    font-size: 18px;
-    color: #283618;
+    font-size: 18px; /* Change this value to adjust the font size */
+    font-family: 'Baloo 2', sans-serif; /* This sets the font */
+    color: #283618; /* This sets the color */
     margin-top: 5px;
 }
+
 
 .image-box {
     width: 25%;
